# opensloth

./: .gitignore  CHANGELOG.md  README.md  TRAINING_README.md  build.sh  hf-models  install.sh  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: convert_unsloth_to_ddp.md
cache_unsloth_dataset/: README.md  gemma.py  qwen3.py
docs/: experiments-sanity-check-eval.md
examples/: qwen_sft.py  qwen_sft_cache_dataset.py  zephyr_dpo_ddp.py
legacy/: get_pci.py  train_qwen.py  unsloth_qwen3_minimal.py  validate_dataset.py
legacy/patching/: ddp_patch.py  get_batch_samples.py
notebooks/: patch.ipynb  train-grpo.ipynb  train.ipynb  train_ddp.ipynb
outputs/sanity-check-tensorboard/opensloth_sanity_20250919_151753_ws2/: README.md
outputs/sanity-check-tensorboard/opensloth_sanity_20250919_151753_ws2/runs/Sep19_15-18-38_l4s/: events.out.tfevents.1758295123.l4s
outputs/sanity-check-tensorboard/opensloth_sanity_20250919_152353_ws2/: README.md
outputs/sanity-check-tensorboard/opensloth_sanity_20250919_152353_ws2/runs/Sep19_15-24-39_l4s/: events.out.tfevents.1758295487.l4s
outputs/sanity-check-tensorboard/opensloth_sanity_20250919_152713_ws4/: README.md
outputs/sanity-check-tensorboard/opensloth_sanity_20250919_152713_ws4/runs/Sep19_15-28-02_l4s/: events.out.tfevents.1758295689.l4s
scripts/: sanity_check_training.sh  train_gemma.py  train_qwen.py  unsloth_qwen3_minimal.py
src/opensloth/: __init__.py  dataset_utils.py  init_modules.py  nccl_grad_sync.py  opensloth_config.py  opensloth_trainer_setup.py
src/opensloth/patching/: ddp_patch.py  gemma.py  get_batch_samples.py  inner_training_loop.py
src/opensloth/scripts/: lora_save_fp8.py  opensloth_sft_trainer.py
src/opensloth/utils/: __init__.py  dataset_cache.py  packing.py
train_scripts/: precompute_dataset.py  train_configurable.py  train_ddp.py  train_qwen.py
