[project]
name = "opensloth"
version = "0.1.8"
description = "A high-performance framework for fine-tuning large language models with multi-GPU support"
authors = [{ name = "anhvth", email = "anhvth.226@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "machine learning",
    "deep learning",
    "transformers",
    "fine-tuning",
    "multi-gpu",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "torchaudio>=2.0.0",
    "unsloth>=2024.11.10",
    "transformers>=4.35.0",
    "trl>=0.7.0",
    "datasets>=2.14.0",
    "pyyaml>=6.0.2",
    "jupyterlab>=4.0.0",
    "fastcore>=1.7.0",
    "speedy-utils>=0.1.20",
    "tensorboard>=2.14.0",
    "fire>=0.5.0",
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/anhvth/opensloth"
Repository = "https://github.com/anhvth/opensloth"
Documentation = "https://github.com/anhvth/opensloth"
"Bug Tracker" = "https://github.com/anhvth/opensloth/issues"

[project.scripts]
opensloth-train = "opensloth.scripts.opensloth_sft_trainer:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensloth"]
