[project]
name = "opensloth"
version = "0.2.1"
description = "A high-performance framework for fine-tuning large language models with multi-GPU support"
authors = [{ name = "anhvth", email = "anhvth.226@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "machine learning",
    "deep learning",
    "transformers",
    "fine-tuning",
    "multi-gpu",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bitsandbytes>=0.47.0",
    "datasets>=3.6.0",
    "llmcompressor>=0.6.0",
    "loguru>=0.7.3",
    "poetry>=2.2.0",
    "speedy-utils>=1.1.17",
    "tensorboardx>=2.6.4",
    "transformers>=4.55.4",
    "trl>=0.22.2",
    "unsloth>=2025.9.6",
    "unsloth-zoo>=2025.9.8",
    "wandb>=0.21.4",
]

[project.urls]
Homepage = "https://github.com/anhvth/opensloth"
Repository = "https://github.com/anhvth/opensloth"
Documentation = "https://github.com/anhvth/opensloth"
"Bug Tracker" = "https://github.com/anhvth/opensloth/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensloth"]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
